--- a/index.html
+++ b/index.html
@@ -1,64 +1,112 @@
-<!-- Updates you requested will be inserted and highlighted here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IGCSE G8 Physics - Interactive Electrostatics</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Include your existing styles here or link an external CSS */
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>⚡ IGCSE G8 Physics ⚡</h1>
+            <p class="subtitle">Interactive Electrostatics Learning Experience</p>
+        </header>
 
-<!-- ✅ 1. Add PHET link in Static Electricity section -->
-<div class="interactive-element">
-    <h4>🌐 Explore More</h4>
-    <p>Try the interactive PhET simulation to visualize how static charges behave!</p>
-    <a href="https://phet.colorado.edu/en/simulation/legacy/balloons" target="_blank" class="btn">Launch PhET Simulation</a>
-</div>
+        <div class="navigation">
+            <button class="nav-btn active" onclick="showSection('intro')">Introduction</button>
+            <button class="nav-btn" onclick="showSection('atoms')">Atomic Structure</button>
+            <button class="nav-btn" onclick="showSection('static')">Static Electricity</button>
+            <button class="nav-btn" onclick="showSection('forces')">Forces & Charges</button>
+            <button class="nav-btn" onclick="showSection('lightning')">Lightning</button>
+            <button class="nav-btn" onclick="showSection('applications')">Applications</button>
+            <button class="nav-btn" onclick="showSection('quiz')">Quiz Time</button>
+            <button class="nav-btn" onclick="showSection('ohm')">Ohm's Law</button>
+        </div>
 
-<!-- ✅ 2. Make charges dynamic in Forces Section -->
-<!-- Add a slider to adjust charge distance and simulate force -->
-<div class="interactive-element">
-    <h4>🔁 Dynamic Charge Interaction</h4>
-    <label for="distanceSlider">Distance between charges:</label>
-    <input type="range" min="1" max="100" value="50" id="distanceSlider" oninput="updateForceDisplay(this.value)">
-    <p id="distanceValue">Distance: 50 units</p>
-    <p id="forceValue">Force: ~ inversely proportional to distance²</p>
-</div>
+        <div class="progress-bar">
+            <div class="progress-fill" id="progressFill" style="width: 14%"></div>
+        </div>
 
-<script>
-function updateForceDisplay(value) {
-    document.getElementById('distanceValue').textContent = `Distance: ${value} units`;
-    const force = 10000 / (value * value);
-    document.getElementById('forceValue').textContent = `Estimated Electrostatic Force: ${force.toFixed(2)} N`;
-}
-</script>
+        <!-- Existing content unchanged -->
 
-<!-- ✅ 3. Add a New Page on Ohm's Law -->
-<!-- Add navigation button -->
-<button class="nav-btn" onclick="showSection('ohm')">Ohm's Law</button>
+        <!-- Static Electricity Section -->
+        <div class="section" id="static">
+            <h2>⚡ Static Electricity</h2>
+            <!-- Existing content -->
 
-<!-- Add new section -->
-<div class="section" id="ohm">
-    <h2>🔌 Ohm's Law</h2>
-    <div class="info-card">
-        <h3>Understanding Ohm's Law</h3>
-        <p>Ohm's Law relates voltage (V), current (I), and resistance (R):</p>
-        <h3 style="text-align: center; font-size: 1.5em;">V = I × R</h3>
+            <div class="interactive-element">
+                <h4>🌐 Explore More</h4>
+                <p>Try the interactive PhET simulation to visualize how static charges behave!</p>
+                <a href="https://phet.colorado.edu/en/simulation/legacy/balloons" target="_blank" class="btn">Launch PhET Simulation</a>
+            </div>
+        </div>
+
+        <!-- Forces Section with dynamic interaction -->
+        <div class="section" id="forces">
+            <h2>🧲 Forces Between Charges</h2>
+            <!-- Existing charges demo -->
+
+            <div class="interactive-element">
+                <h4>🔁 Dynamic Charge Interaction</h4>
+                <label for="distanceSlider">Distance between charges:</label>
+                <input type="range" min="1" max="100" value="50" id="distanceSlider" oninput="updateForceDisplay(this.value)">
+                <p id="distanceValue">Distance: 50 units</p>
+                <p id="forceValue">Force: ~ inversely proportional to distance²</p>
+            </div>
+        </div>
+
+        <!-- Ohm's Law Section -->
+        <div class="section" id="ohm">
+            <h2>🔌 Ohm's Law</h2>
+            <div class="info-card">
+                <h3>Understanding Ohm's Law</h3>
+                <p>Ohm's Law relates voltage (V), current (I), and resistance (R):</p>
+                <h3 style="text-align: center; font-size: 1.5em;">V = I × R</h3>
+            </div>
+
+            <div class="interactive-element">
+                <h4>⚙️ Try it yourself!</h4>
+                <label>Voltage (V): <input type="number" id="voltage" value="10"></label><br>
+                <label>Resistance (Ω): <input type="number" id="resistance" value="2"></label><br>
+                <button class="btn" onclick="calculateCurrent()">Calculate Current</button>
+                <p id="currentResult">Current (I) = ? A</p>
+            </div>
+        </div>
     </div>
 
-    <div class="interactive-element">
-        <h4>⚙️ Try it yourself!</h4>
-        <label>Voltage (V): <input type="number" id="voltage" value="10"></label><br>
-        <label>Resistance (Ω): <input type="number" id="resistance" value="2"></label><br>
-        <button class="btn" onclick="calculateCurrent()">Calculate Current</button>
-        <p id="currentResult">Current (I) = ? A</p>
-    </div>
-</div>
+    <script>
+        const sections = ['intro', 'atoms', 'static', 'forces', 'lightning', 'applications', 'quiz', 'ohm'];
 
-<script>
-function calculateCurrent() {
-    const V = parseFloat(document.getElementById('voltage').value);
-    const R = parseFloat(document.getElementById('resistance').value);
-    const I = V / R;
-    document.getElementById('currentResult').textContent = `Current (I) = ${I.toFixed(2)} A`;
-}
-</script>
+        function showSection(sectionName) {
+            document.querySelectorAll('.section').forEach(section => section.classList.remove('active'));
+            document.querySelectorAll('.nav-btn').forEach(btn => btn.classList.remove('active'));
+            document.getElementById(sectionName).classList.add('active');
+            event.target.classList.add('active');
+            updateProgress(sectionName);
+        }
 
-<!-- ✅ Update progress logic to include Ohm's Law -->
-<!-- In your JS showSection and progressBar logic -->
-// Replace:
-const sections = ['intro', 'atoms', 'static', 'forces', 'lightning', 'applications', 'quiz'];
-// With:
-const sections = ['intro', 'atoms', 'static', 'forces', 'lightning', 'applications', 'quiz', 'ohm'];
+        function updateProgress(section) {
+            const index = sections.indexOf(section);
+            const progress = ((index + 1) / sections.length) * 100;
+            document.getElementById('progressFill').style.width = progress + '%';
+        }
+
+        function updateForceDisplay(value) {
+            document.getElementById('distanceValue').textContent = `Distance: ${value} units`;
+            const force = 10000 / (value * value);
+            document.getElementById('forceValue').textContent = `Estimated Electrostatic Force: ${force.toFixed(2)} N`;
+        }
+
+        function calculateCurrent() {
+            const V = parseFloat(document.getElementById('voltage').value);
+            const R = parseFloat(document.getElementById('resistance').value);
+            const I = V / R;
+            document.getElementById('currentResult').textContent = `Current (I) = ${I.toFixed(2)} A`;
+        }
+    </script>
+</body>
+</html>
