--- a/index.html
+++ b/index.html
@@ -1,134 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Electrostatics Interactive</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #f5f5dc;
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
-    .nav-menu {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-      flex-wrap: wrap;
-    }
-    .nav-btn {
-      background: rgba(255,255,255,0.2);
-      color: white;
-      border: 2px solid rgba(255,255,255,0.3);
-      padding: 12px 24px;
-      border-radius: 25px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: all 0.3s ease;
-    }
-    .nav-btn:hover, .nav-btn.active {
-      background: rgba(255,255,255,0.3);
-      transform: translateY(-2px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-    }
-    .section {
-      display: none;
-      padding: 20px;
-      background: white;
-      color: #333;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-    .section.active {
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <h1>⚡ Electrostatics Interactive ⚡</h1>
-  <div class="nav-menu">
-    <button class="nav-btn active" onclick="showSection('intro', this)">Introduction</button>
-    <button class="nav-btn" onclick="showSection('atoms', this)">Atoms</button>
-    <button class="nav-btn" onclick="showSection('static', this)">Static Electricity</button>
-    <button class="nav-btn" onclick="showSection('forces', this)">Forces</button>
-    <button class="nav-btn" onclick="showSection('lightning', this)">Lightning</button>
-    <button class="nav-btn" onclick="showSection('applications', this)">Applications</button>
-    <button class="nav-btn" onclick="showSection('ohm', this)">Ohm's Law</button>
-    <button class="nav-btn" onclick="showSection('quiz', this)">Quiz</button>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Electrostatics Interactive</title>
+    <style>
+      body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(to right, #00c6ff, #0072ff);
+        color: white;
+        padding: 20px;
+      }
+      .nav-menu {
+        display: flex;
+        gap: 10px;
+        margin-bottom: 20px;
+        flex-wrap: wrap;
+      }
+      .nav-btn {
+        background-color: #ffffff22;
+        border: none;
+        padding: 10px 20px;
+        color: white;
+        font-weight: bold;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+      .nav-btn:hover {
+        background-color: #ffffff44;
+      }
+      .section {
+        display: none;
+        background: white;
+        color: black;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      }
+      .active {
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Electrostatics Interactive</h1>
+    <div class="nav-menu">
+      <button class="nav-btn" onclick="showSection('intro')">Introduction</button>
+      <button class="nav-btn" onclick="showSection('atoms')">Atoms</button>
+      <button class="nav-btn" onclick="showSection('static')">Static Electricity</button>
+      <button class="nav-btn" onclick="showSection('quiz')">Quiz</button>
+    </div>
 
-  <div class="section active" id="intro">
-    <h2>Introduction</h2>
-    <p>Welcome to the interactive electrostatics webpage!</p>
-  </div>
+    <div id="intro" class="section active">
+      <h2>Introduction</h2>
+      <p>Welcome to the interactive electrostatics webpage!</p>
+    </div>
 
-  <div class="section" id="atoms">
-    <h2>Atoms</h2>
-    <p>Atoms are made of protons, neutrons, and electrons.</p>
-  </div>
+    <div id="atoms" class="section">
+      <h2>Atoms</h2>
+      <p>Atoms are made of protons, neutrons, and electrons.</p>
+    </div>
 
-  <div class="section" id="static">
-    <h2>Static Electricity</h2>
-    <p>Static electricity is caused by an imbalance of electric charges.</p>
-    <p><a href="https://phet.colorado.edu/en/simulation/legacy/balloons" target="_blank">🔗 Launch PhET: Balloons and Static Electricity</a></p>
-  </div>
+    <div id="static" class="section">
+      <h2>Static Electricity</h2>
+      <p>Static electricity is caused by an imbalance of electric charges.</p>
+    </div>
 
-  <div class="section" id="forces">
-    <h2>Forces Between Charges</h2>
-    <p>Explore how charges interact and how the electrostatic force changes with distance.</p>
-    <label for="distanceSlider">Distance between charges:</label>
-    <input type="range" min="1" max="100" value="50" id="distanceSlider" oninput="updateForceDisplay(this.value)">
-    <p id="distanceValue">Distance: 50 units</p>
-    <p id="forceValue">Force: ~ inversely proportional to distance²</p>
-  </div>
+    <div id="quiz" class="section">
+      <h2>Quiz</h2>
+      <p>Coming soon!</p>
+    </div>
 
-  <div class="section" id="lightning">
-    <h2>Lightning</h2>
-    <p>Lightning occurs due to the discharge of static electricity between clouds and the ground.</p>
-  </div>
-
-  <div class="section" id="applications">
-    <h2>Applications</h2>
-    <p>Electrostatics is used in photocopiers, air purifiers, and spray painting.</p>
-  </div>
-
-  <div class="section" id="ohm">
-    <h2>Ohm's Law</h2>
-    <p>Ohm's Law relates voltage, current, and resistance using the formula <strong>V = IR</strong>.</p>
-    <label>Voltage (V): <input type="number" id="voltage" value="10"></label><br>
-    <label>Resistance (Ω): <input type="number" id="resistance" value="2"></label><br>
-    <button onclick="calculateCurrent()">Calculate Current</button>
-    <p id="currentResult">Current (I) = ? A</p>
-  </div>
-
-  <div class="section" id="quiz">
-    <h2>Quiz</h2>
-    <p>Coming soon!</p>
-  </div>
-
-  <script>
-    function showSection(sectionId, btn) {
-      document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
-      document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-      document.getElementById(sectionId).classList.add('active');
-      if (btn) btn.classList.add('active');
-    }
-
-    function updateForceDisplay(value) {
-      document.getElementById('distanceValue').textContent = `Distance: ${value} units`;
-      const force = 10000 / (value * value);
-      document.getElementById('forceValue').textContent = `Estimated Electrostatic Force: ${force.toFixed(2)} N`;
-    }
-
-    function calculateCurrent() {
-      const V = parseFloat(document.getElementById('voltage').value);
-      const R = parseFloat(document.getElementById('resistance').value);
-      const I = V / R;
-      document.getElementById('currentResult').textContent = `Current (I) = ${I.toFixed(2)} A`;
-    }
-  </script>
-</body>
+    <script>
+      function showSection(id) {
+        const sections = document.querySelectorAll('.section');
+        sections.forEach(section => {
+          section.classList.remove('active');
+        });
+        document.getElementById(id).classList.add('active');
+      }
+    </script>
+  </body>
 </html>
