--- a/index.html
+++ b/index.html
@@ -504,34 +504,42 @@
             </div>
         </div>
 
-        <!-- Forces Section -->
-        <div class="section" id="forces">
-            <h2>🧲 Forces Between Charges</h2>
-            <div class="charge-demo">
-                <div class="charge positive" onclick="demonstrateForce('like')">+</div>
-                <div class="force-arrow" id="forceArrow1">↔</div>
-                <div class="charge positive" onclick="demonstrateForce('like')">+</div>
-            </div>
-            
-            <div class="charge-demo">
-                <div class="charge positive" onclick="demonstrateForce('unlike')">+</div>
-                <div class="force-arrow" id="forceArrow2">↔</div>
-                <div class="charge negative" onclick="demonstrateForce('unlike')">-</div>
-            </div>
+<!-- Forces Section -->
+<div class="section" id="forces">
+  <h2>🧲 Forces Between Charges</h2>
 
-            <div class="concept-box">
-                <h4>Fundamental Law of Charges:</h4>
-                <p><strong>Like charges repel:</strong> + and + push away from each other</p>
-                <p><strong>Unlike charges attract:</strong> + and - pull toward each other</p>
-                <p><strong>Remember:</strong> Electrostatic force is stronger than gravitational force!</p>
-            </div>
+  <div class="charge-demo">
+    <div class="charge positive" onclick="demonstrateForce('like')">+</div>
+    <div class="force-arrow" id="forceArrow1">↔</div>
+    <div class="charge positive" onclick="demonstrateForce('like')">+</div>
+  </div>
 
-            <div class="interactive-element">
-                <h4>🎮 Interactive Demo</h4>
-                <p>Click on the charges above to see the forces in action!</p>
-                <div id="forceExplanation"></div>
-            </div>
-        </div>
+  <div class="charge-demo">
+    <div class="charge positive" onclick="demonstrateForce('unlike')">+</div>
+    <div class="force-arrow" id="forceArrow2">↔</div>
+    <div class="charge negative" onclick="demonstrateForce('unlike')">-</div>
+  </div>
+
+  <h4>🎮 Interactive Demo</h4>
+  <p>Click on the charges above to see the forces in action!</p>
+  <div id="forceExplanation" style="margin-bottom: 15px;"></div>
+
+  <div class="concept-box" style="background:#eef; padding: 10px; border-radius: 8px;">
+    <h4>Fundamental Law of Charges:</h4>
+    <p><strong>Like charges repel:</strong> + and + push away from each other</p>
+    <p><strong>Unlike charges attract:</strong> + and - pull toward each other</p>
+    <p><strong>Remember:</strong> Electrostatic force is stronger than gravitational force!</p>
+  </div>
+
+  <div class="interactive-element" style="margin-top: 20px;">
+    <h4>🔗 Explore More</h4>
+    <p><a href="https://phet.colorado.edu/en/simulation/legacy/coulombs-law" target="_blank">
+      ➤ Launch PhET Simulation: Coulomb's Law
+    </a></p>
+  </div>
+</div>
+
+        
 
         <!-- Lightning Section -->
         <div class="section" id="lightning">
