--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
             <button class="nav-btn" onclick="showSection('lightning')">Lightning</button>
             <button class="nav-btn" onclick="showSection('applications')">Applications</button>
             <button class="nav-btn" onclick="showSection('quiz')">Quiz Time</button>
+            <button class="nav-btn" onclick="showSection('ohm')">Ohm's Law</button>
         </div>
 
         <div class="progress-bar">
