--- a/index.html
+++ b/index.html
@@ -630,6 +630,39 @@
         </div>
     </div>
 
+<!-- Ohm's Law Section -->
+<div class="section" id="ohm">
+  <h2>🔌 Ohm’s Law</h2>
+  <p><strong>Ohm’s Law</strong> describes the relationship between voltage, current, and resistance:</p>
+
+  <div style="background:#eef; color:#000; padding: 12px; border-left: 5px solid #0072ff; margin-bottom: 10px;">
+    <strong>Formula:</strong><br><br>
+    <span style="font-size: 1.2em;">V = I × R</span><br>
+    <ul>
+      <li><strong>V</strong> is the voltage (Volts)</li>
+      <li><strong>I</strong> is the current (Amperes)</li>
+      <li><strong>R</strong> is the resistance (Ohms)</li>
+    </ul>
+  </div>
+
+  <h4>🧪 Interactive Calculator</h4>
+  <p>Enter any two values to calculate the third:</p>
+
+  <label>Voltage (V): <input type="number" id="voltage" step="any" /></label><br>
+  <label>Current (I): <input type="number" id="current" step="any" /></label><br>
+  <label>Resistance (R): <input type="number" id="resistance" step="any" /></label><br><br>
+  
+  <button onclick="calculateOhmsLaw()">Calculate</button>
+  <p id="ohmResult">Result: ?</p>
+
+  <h4>🔗 Extra Practice</h4>
+  <p><a href="https://phet.colorado.edu/en/simulation/ohms-law" target="_blank">
+    ➤ Launch PhET Simulation: Ohm’s Law
+  </a></p>
+</div>
+
+
+    
     <script>
         let currentQuestion = 0;
         let score = 0;
@@ -938,6 +971,27 @@
                 document.querySelector(`[onclick="showSection('${sections[currentSectionIndex - 1]}')"]`).click();
             }
         }
+
+function calculateOhmsLaw() {
+  const V = parseFloat(document.getElementById("voltage").value);
+  const I = parseFloat(document.getElementById("current").value);
+  const R = parseFloat(document.getElementById("resistance").value);
+  let result = "";
+
+  if (!isNaN(V) && !isNaN(I)) {
+    result = `Resistance R = ${(V / I).toFixed(2)} Ω`;
+  } else if (!isNaN(V) && !isNaN(R)) {
+    result = `Current I = ${(V / R).toFixed(2)} A`;
+  } else if (!isNaN(I) && !isNaN(R)) {
+    result = `Voltage V = ${(I * R).toFixed(2)} V`;
+  } else {
+    result = "Please enter any two values.";
+  }
+
+  document.getElementById("ohmResult").textContent = "Result: " + result;
+}
+
+        
     </script>
 </body>
 </html>
